# cvxbson

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  cvxbson-0.0.6-py3-none-any.whl  cvxbson-0.0.7-py3-none-any.whl  cvxbson-0.0.8-py3-none-any.whl  pyproject.toml  taskfile.yml  test.bson  test.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  dependabot.yml
.github/taskfiles/: docs.yml
.github/workflows/: basic.yml  book.yml  ci.yml  pre-commit.yml  release.yml
book/: _config.yml
book/docs/: api.md  index.md  marimo.md  reports.md
book/docs/notebooks/: demo.ipynb
book/marimo/: demo.py
book/sphinx/: conf.py
cli/: smallest_eigenvalue.py
cvx/bson/: __init__.py  dataclass.py  file.py  io.py
cvx/data/: data_api.py.jinja2  render.py
cvx/json/: __init__.py  file.py  numpyencoder.py
experiment/: creator.py.jinja2  data.bson  demo.py  demo1.py  demo2.py  fill.py  xxx.bson
marimo/: demo.html
marimushka/: index.html
marimushka/notebooks/: demo.html
pdoc/: cvx.html
pdoc/cvx/: bson.html  json.html
pdoc/cvx/bson/: dataclass.html  file.html  io.html
pdoc/cvx/json/: file.html  numpyencoder.html
src/cvx/bson/: __init__.py  dataclass.py  file.py  io.py
src/cvx/json/: __init__.py  file.py  numpyencoder.py
src/tests/: test_bson.py  test_dataclass.py  test_encode_decode.py  test_json.py  test_pandas.py
taskfiles/: build.yml
templates/: parse.py
tests/: conftest.py  test_bson.py  test_bson_io.py  test_dataclass.py  test_encode_decode.py  test_json.py  test_pandas.py  test_taskfile.py
tests/coverage/: coverage.json  coverage.xml
tests/html-coverage/: class_index.html  function_index.html  index.html  status.json  z_706efc05c99f8a7b___init___py.html  z_706efc05c99f8a7b_dataclass_py.html  z_706efc05c99f8a7b_file_py.html  z_706efc05c99f8a7b_io_py.html  z_aa54937686e8983b___init___py.html  z_aa54937686e8983b_file_py.html  z_aa54937686e8983b_numpyencoder_py.html
tests/html-report/: report.html
tests/resources/: maffay.bson  stock_prices.csv
