[project]
name = "cvxbson"
version = "0.0.0"
description = "Dealing with json and bson files"
authors = [{name = "Thomas Schmelzer", email = "thomas.schmelzer@gmail.com"}]
readme = "README.md"
repository = "https://github.com/cvxgrp/cvxbson"
#packages = [{include = "cvx"}]
requires-python = ">=3.10"
dependencies = [
    "bson>=0.5.10",
    "numpy>=2",
    "pandas>=2",
    "polars>=1.16.0",
    "pyarrow>=18.1.0",
    "typing-extensions>=4.12.2",
]

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "pre-commit>=4.0.1",
    "loguru>=0.7.0"
]


[tool.ruff]
select = ["E", "F", "I"]
line-length = 120
target-version = "py310"
exclude = [
    "*__init__.py"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cvx"]
