[project]
name = "cvxbson"
version = "0.0.0"
description = "Dealing with json and bson files"
authors = [{name = "Thomas Schmelzer", email = "thomas.schmelzer@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bson>=0.5.10",
    "numpy>=2",
    "pandas>=2",
    "polars>=1.16.0",
    "pyarrow>=18.1.0"
]

[project.urls]
repository = "https://github.com/cvxgrp/cvxbson"

[project.optional-dependencies]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "pre-commit>=4.0.1",
 dev-dependencies = [
     "pytest>=8.3.3",
     "pre-commit>=4.0.1",
     "marimo~=0.14.17"
 ]
]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    "*__init__.py"
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cvx"]

[tool.deptry]
# see https://deptry.com/usage/#pep-621-dev-dependency-groups
pep621_dev_dependency_groups = ["dev"]
